@@ -203,6 +203,9 @@ Library
 
 - Issue #20334: inspect.Signature and inspect.Parameter are now hashable.
 
+- Issue #15916: doctest.DocTestSuite returns an empty unittest.TestSuite instead
+  of raising ValueError if it finds no tests
+
 IDLE
 ----
 
